@@ -1,11 +1,20 @@
 File Aliases 7.x-1.x-dev, xxxx-xx-xx (Developmental release)
 --------------------------------------------------------------------------------
 
+- #2620140: Fixed issue with rooted and URL based URL aliases.
+- #2613660 by iamjdcollins, Deciphered: Fixed issue with Pathauto integration.
+- #2259257 by dpintats, Deciphered: Fixed Content Length header.
 - #2256545 by dpintats, Deciphered: Fixed deletion of URL alias.
 - #1909040 by Albert Volkman: Fixed line endings.
 - #1557984 by greg.1.anderson: Fixed database issue if no alias source.
 - #1365384 by dpintats: Fixed issue with files not being deleted.
 - #1190262 by mrfelton and Ankabout: Fixed Install issues.
+
+
+
+File Aliases 7.x-1.0-beta1, 2011-11-15
+--------------------------------------------------------------------------------
+
 - #1136608: Fixed issue with default filealias path.
 - #1102174 by LPCA: Updated module package.
 - Initial 7.x release.
